# serializer version: 1
# name: test_all_entities[0][climate_adc_t3000_state.json][fan.adc_t3000-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto low',
        'Low',
        'Circulation',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.adc_t3000',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 56>,
    'translation_key': None,
    'unique_id': '3245146787.68-68-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_airzone_aidoo_control_hvac_unit_state.json][fan.aidoo_control_hvac_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Low',
        'High',
        'Auto medium',
        'Medium',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.aidoo_control_hvac_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': None,
    'unique_id': '3245146787.12-68-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_radio_thermostat_ct100_plus_state.json][fan.z_wave_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto low',
        'Low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.z_wave_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': None,
    'unique_id': '3245146787.13-68-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][fan.zwa4002_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.zwa4002_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.57-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][enbrighten_55258_zw4002_state.json][fan.zwa4002_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4002_fan',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.zwa4002_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[0][fan_generic_state.json][fan.generic_fan_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.generic_fan_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.17-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][fan_generic_state.json][fan.generic_fan_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Generic Fan Controller',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.generic_fan_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[0][fan_honeywell_39358_state.json][fan.honeywell_in_wall_smart_fan_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.honeywell_in_wall_smart_fan_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.61-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][fan_honeywell_39358_state.json][fan.honeywell_in_wall_smart_fan_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'honeywell_in_wall_smart_fan_control',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.honeywell_in_wall_smart_fan_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[0][leviton_zw4sf_state.json][fan.4_speed_fan_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.4_speed_fan_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.88-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][leviton_zw4sf_state.json][fan.4_speed_fan_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '4 Speed Fan Controller',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 50,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.4_speed_fan_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][fan.z_wave_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto low',
        'Low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.z_wave_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': None,
    'unique_id': '3245146787.8-68-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_plus_different_endpoints_state.json][fan.z_wave_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto low',
        'Low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.z_wave_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': None,
    'unique_id': '3245146787.26-68-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct101_multiple_temp_units_state.json][fan.thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto low',
        'Low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': None,
    'unique_id': '3245146787.4-68-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][fan.zwa4013_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.zwa4013_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.19-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][enbrighten_58446_zwa4013_state.json][fan.zwa4013_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'zwa4013_fan',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.zwa4013_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[1][fan_ge_12730_state.json][fan.in_wall_smart_fan_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.in_wall_smart_fan_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.24-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][fan_ge_12730_state.json][fan.in_wall_smart_fan_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'In-Wall Smart Fan Control',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.in_wall_smart_fan_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[1][fan_hs_fc200_state.json][fan.scene_capable_fan_control_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.scene_capable_fan_control_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.39-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][fan_hs_fc200_state.json][fan.scene_capable_fan_control_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Scene Capable Fan Control Switch',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.scene_capable_fan_control_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[2][fan_jasco_14314_state.json][fan.in_wall_fan_speed_control_500s-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.in_wall_fan_speed_control_500s',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '3245146787.24-38-0-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[2][fan_jasco_14314_state.json][fan.in_wall_fan_speed_control_500s-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'In-Wall Fan Speed Control, 500S',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.in_wall_fan_speed_control_500s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[2][inovelli_lzw36_state.json][fan.family_room_combo_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'breeze',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.family_room_combo_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': None,
    'unique_id': '3245146787.19-38-2-currentValue',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[2][inovelli_lzw36_state.json][fan.family_room_combo_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'family_room_combo (2)',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'breeze',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.family_room_combo_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
